--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,6 +19,7 @@
 	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 	ga('create', 'UA-189811564-1', 'auto');
+	ga('require', 'OPT-WVNXGNR');
 	ga('send', 'pageview');
 	</script>
 </head>
